# Guardian_Gpu

./: .gitignore  CMakeLists.txt  Gpu_mon.cpp  TECHNICAL_DOCUMENTATION.md  Technical_Document_Template.md  brain_state.pkg  csv_logger.h  cuda_workload.cpp  cuda_workload.cu  document.md  etw_monitor.cpp  final_diagrams_fixed.md  generate_project_plan.py  gpu_log_20260129_221807.csv  gpu_log_20260129_230439.csv  gpu_log_20260129_233351.csv  gpu_log_20260129_233437.csv  gpu_mon.h  guardian_brain.py  guardian_plan_tmp0.xml  knowledge_bank.json  logger.h  main.cpp  monitor_main.cpp  pdf_vs_code_gaps.md  poc_background_tier.py  poc_vault.py  sleepy.cpp  stats.h  test_app.cpp  test_kernel.cu
Guardian_Gpu-main/: etw_monitor.h
legacy/: cupti_mon.cpp  cupti_monitor.h  dependencies_manager.cpp  dependencies_manager.h  injector_main.cpp  ipc_shared.h  probe_main.cpp  setup_dlls.ps1
